feat: finished course
